--- a/src/components/CreateMail.css
+++ b/src/components/CreateMail.css
@@ -1,19 +1,16 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 15px;
     gap: 1rem;
+    width: 70vw !important; 
+    padding-left: 40px !important;
 }
-
 
 .btn{
     margin-top: 40px;
-    width: 70px;
+    width: 50px;
 }
 
 .top-para{
@@ -38,6 +35,7 @@
     padding-left: 5px;
     padding-right: 10px;
     border-radius: 40px;
+
 }
 
 .title{
@@ -45,6 +43,8 @@
     border: none;
     border-bottom: 1px solid black;
     outline: none;
+    width: 70vw !important; 
+
 }
 
 .cc{
